[metadata]
name = streaming_indicators
version = 0.1.0
author = Rishabh Gupta
author_email = rishabhg1997@gmail.com
description = A python library for computing technical analysis indicators on streaming data.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/mr-easy/streaming_indicators
project_urls =
    Bug Tracker = https://github.com/mr-easy/streaming_indicators/issues
    Code = https://github.com/mr-easy/streaming_indicators
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4
install_requires =
    numpy >= 1.13.3
    pandas >= 2.0.0

[options.packages.find]
where = src